name:                Only
version:             0.1
synopsis:            The 1-tuple type or single-value "collection"
license:             BSD3
license-file:        LICENSE
author:              Herbert Valerio Riedel
maintainer:          hvr@gnu.org
bug-reports:         https://github.com/hvr/Only/issues
category:            Data
build-type:          Simple
cabal-version:       >=1.10
description:         This package provides the canonical anonymous 1-tuple type missing from Haskell for attaching typeclass instances.
tested-with:
  GHC==7.4.2,
  GHC==7.6.3,
  GHC==7.8.4,
  GHC==7.10.3,
  GHC==8.0.2,
  GHC==8.2.2,
  GHC==8.4.4,
  GHC==8.6.5,
  GHC==8.8.1

Source-Repository head
  Type:              git
  Location:          https://github.com/hvr/Only.git

library
  hs-source-dirs:    src
  exposed-modules:   Data.Tuple.Only

  default-language:  Haskell2010
  other-extensions:  DeriveGeneric
                   , DeriveDataTypeable
                   , DeriveFoldable
                   , DeriveFunctor
                   , DeriveTraversable
                   , Safe

  build-depends:     base    >= 4.5 && <5
                   , deepseq >= 1.1 && <1.5

  if impl(ghc == 7.4.*)
     build-depends: ghc-prim
